RESOLVED FIXED156742
[Cairo] GraphicsContext::drawFocusRing methods are not consistent to each other
https://bugs.webkit.org/show_bug.cgi?id=156742
Summary [Cairo] GraphicsContext::drawFocusRing methods are not consistent to each other
Carlos Garcia Campos
Reported 2016-04-19 06:17:47 PDT
We are rendering the focus ring differently depending on whether a path is used or a vector of rectangles. This is causing that some reftests fail because they assume we always render the focus ring the same way. For example fast/images/image-map-outline-in-positioned-container.html, when rendering the test GraphicsContext::drawFocusRing is called with a path, and when rendering the reference it's called with a vector of rectangles, producing different results.
Attachments
Patch (3.98 KB, patch)
2016-04-19 06:20 PDT, Carlos Garcia Campos
no flags
Try to fix EFL build (4.00 KB, patch)
2016-04-19 06:48 PDT, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2016-04-19 06:20:55 PDT
Carlos Garcia Campos
Comment 2 2016-04-19 06:48:43 PDT
Created attachment 276721 [details] Try to fix EFL build
Carlos Garcia Campos
Comment 3 2016-04-19 08:10:29 PDT
Note You need to log in before you can comment on or make changes to this bug.