Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp
@@ -599,45 +599,11 @@ void GraphicsContext::drawFocusRing(const Path& path, float width, float /* offs
 
     cairo_t* cr = platformContext()->cr();
     cairo_save(cr);
+    cairo_push_group(cr);
     appendWebCorePathToCairoContext(cr, path);
     setSourceRGBAFromColor(cr, ringColor);
     cairo_set_line_width(cr, width);
     setPlatformStrokeStyle(focusRingStrokeStyle());
-    cairo_stroke(cr);
-    cairo_restore(cr);
-}
-
-void GraphicsContext::drawFocusRing(const Vector<FloatRect>& rects, float width, float /* offset */, const Color& color)
-{
-    if (paintingDisabled())
-        return;
-
-    cairo_t* cr = platformContext()->cr();
-    cairo_save(cr);
-    cairo_push_group(cr);
-    cairo_new_path(cr);
-
-#if PLATFORM(GTK)
-    for (const auto& rect : rects)
-        cairo_rectangle(cr, rect.x(), rect.y(), rect.width(), rect.height());
-#else
-    unsigned rectCount = rects.size();
-    int radius = (width - 1) / 2;
-    Path path;
-    for (unsigned i = 0; i < rectCount; ++i) {
-        if (i > 0)
-            path.clear();
-        path.addRoundedRect(rects[i], FloatSize(radius, radius));
-        appendWebCorePathToCairoContext(cr, path);
-    }
-#endif
-    Color ringColor = color;
-    adjustFocusRingColor(ringColor);
-    adjustFocusRingLineWidth(width);
-    setSourceRGBAFromColor(cr, ringColor);
-    cairo_set_line_width(cr, width);
-    setPlatformStrokeStyle(focusRingStrokeStyle());
-
     cairo_set_operator(cr, CAIRO_OPERATOR_OVER);
     cairo_stroke_preserve(cr);
 
@@ -649,6 +615,29 @@ void GraphicsContext::drawFocusRing(const Vector<FloatRect>& rects, float width,
     cairo_set_operator(cr, CAIRO_OPERATOR_OVER);
     cairo_paint(cr);
     cairo_restore(cr);
+}
+
+void GraphicsContext::drawFocusRing(const Vector<FloatRect>& rects, float width, float /* offset */, const Color& color)
+{
+    if (paintingDisabled())
+        return;
+
+    Path path;
+#if PLATFORM(GTK)
+    for (const auto& rect : rects)
+        path.addRect(rect);
+#else
+    unsigned rectCount = rects.size();
+    int radius = (width - 1) / 2;
+    Path subPath;
+    for (unsigned i = 0; i < rectCount; ++i) {
+        if (i > 0)
+            subPath.clear();
+        subPath.addRoundedRect(rects[i], FloatSize(radius, radius));
+        path.addPath(subPath, AffineTransform());
+    }
+#endif
+    drawFocusRing(path, width, 0, color);
 }
 
 void GraphicsContext::drawLineForText(const FloatPoint& origin, float width, bool printing, bool doubleUnderlines)
